feat: resolve h2, logging problem